--- a/css/main_page/blocks/contacts.css
+++ b/css/main_page/blocks/contacts.css
@@ -7,13 +7,74 @@
   font-size: 13px;
   text-decoration: underline;
   color: #98A4A8;
+  margin-bottom: 10px;
+  
 }
 
 .contacts__schedule:hover {
   color: #fff;
+  cursor: pointer;
 }
 
 .contacts__phone-info {
   font-size: 11px;
   color: #9A9A9A;
+}
+
+
+
+.contacts__schedule_wrap {
+  position: relative;
+}
+
+
+.dropdown {
+  position: absolute;
+  padding: 12px  21px;
+  background: #EDEDED;
+  border-radius: 5px;
+  top: 100%;
+  white-space: nowrap;
+  line-height: 1.6;
+  right: -9999px;
+  opacity: 0;
+  transition: opacity 0,4s;
+}
+
+.dropdown::after {
+  content: "";
+  position: absolute;
+  border: 10px solid transparent;
+  border-bottom-color:#EDEDED ;
+  border-top-width: 0px;
+  top: -10px;
+  right: 43px;
+}
+
+.dropdown::before {
+  content: "";
+  height: 30px;
+  width: 100%;
+  position: absolute;
+  top: -10px;
+  right: 0px;
+}
+
+
+.contacts__schedule_wrap:hover .dropdown {
+  right: 0px;
+  opacity: 1;
+}
+
+
+.dropdown__days {
+  font-size: 13px;
+  font-weight: 700;
+  color: #1E1F20;
+}
+
+.dropdown__dinner {
+  font-size: 13px;
+  font-weight: 600;
+  color: #1E1F20;
 }
