--- a/css/main_page/blocks/main-page-wrapper.css
+++ b/css/main_page/blocks/main-page-wrapper.css
@@ -1,33 +1,39 @@
 
 
 
-.main-page-wrapper {
+/* .main-page-wrapper {
   background: url(../../../img/main_page/site_background-1.png) no-repeat center top, url(../../../img/main_page/site_background-2.png) no-repeat center bottom 156px;
-}
+} */
 
 
-/* .main-page-wrapper::before {
+ .main-page-wrapper::before {
   content: "";
   position: absolute;
   width: 100%; 
-  height: 1000px;
-  background-image: url(./img/site_background-1.png);
+  min-height: 100%;
+  left: 0px;
+  top: 0px;
+  background-image: url(../../../img/main_page/site_background-1.png);
   background-repeat: no-repeat;
   background-position-x:center;
-  background-position-y:top ;
+  background-position-y:top;
   filter: grayscale(100%);
+  box-shadow: inset 0px 0px 10px 20px #17191c;
   z-index: -10;
 }
 
 .main-page-wrapper::after {
   content: "";
   position: absolute;
+  bottom: 132px;
+  left: 0;
   width: 100%; 
-  height: 2782px;
-  background-image: url(./img/site_background-2.png);
+  min-height: 100%;
+  background-image: url(../../../img/main_page/site_background-2.png);
   background-repeat: no-repeat;
   background-position-x:center;
-  background-position-y:bottom ;
+  background-position-y:bottom;
   filter: grayscale(100%);
+  box-shadow: inset 10px 0px 10px 20px #17191c;
   z-index: -9;
-} */
+} 
