--- a/css/main_page/blocks/paginator.css
+++ b/css/main_page/blocks/paginator.css
@@ -25,6 +25,7 @@
   font-weight: bold;
   text-decoration: none;
   border-radius: 50%;
+  transition: 0.75s;
 }
 
 .paginator__item_active .paginator__link, .paginator__link:hover {
