--- a/css/offers_page/blocks/partners.css
+++ b/css/offers_page/blocks/partners.css
@@ -34,6 +34,7 @@
   justify-content: center;
   align-items: center;
   filter: grayscale(100%);
+  transition: 0.75s;
 }
 
 .partners__link:hover {
