--- a/css/offers_page/blocks/sm-icon-insta.css
+++ b/css/offers_page/blocks/sm-icon-insta.css
@@ -1,7 +1,33 @@
-.sm-icon-insta .social-media__link {
-  background-image: url(../../../img/main_page/sm-icons/insta.png);
+.sm-icon-insta::after {  
+  content: "";
+  position: absolute;
+  display: block;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 36px;
+  height: 36px;
+  background: url('../../../img/sm-icons/css_sprites.png') -10px -66px;
+  transition:  0.75s;
+} 
+
+.sm-icon-insta::before {  
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 36px;
+  height: 36px;
+  background: url('../../../img/sm-icons/css_sprites.png') -66px -66px;
+  opacity: 0;
+  transition:  0.75s;
+} 
+
+.sm-icon-insta:hover:after {
+  opacity: 0;
 }
 
-.sm-icon-insta .social-media__link:hover {
-  background-image: url(../../../img/main_page/sm-icons/insta-hover.png);
+.sm-icon-insta:hover:before {
+  opacity: 1;
 }
