--- a/css/offers_page/blocks/sm-icon-telegram.css
+++ b/css/offers_page/blocks/sm-icon-telegram.css
@@ -1,7 +1,33 @@
-.sm-icon-telegram .social-media__link {
-  background-image: url(../../../img/main_page/sm-icons/telegram.png);
+.sm-icon-telegram::after {  
+  content: "";
+  position: absolute;
+  display: block;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 36px;
+  height: 36px;
+  background: url('../../../img/sm-icons/css_sprites.png') -122px -10px;
+  transition:  0.75s;
+} 
+
+.sm-icon-telegram::before {  
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 36px;
+  height: 36px;
+  background: url('../../../img/sm-icons/css_sprites.png') -122px -66px;
+  opacity: 0;
+  transition:  0.75s;
+} 
+
+.sm-icon-telegram:hover:after {
+  opacity: 0;
 }
 
-.sm-icon-telegram .social-media__link:hover {
-  background-image: url(../../../img/main_page/sm-icons/telegram-hover.png);
+.sm-icon-telegram:hover:before {
+  opacity: 1;
 }
