--- a/css/offers_page/offers-main.css
+++ b/css/offers_page/offers-main.css
@@ -1,7 +1,8 @@
-@import url('./layout/fonts.css');
-@import url('./layout/normalize.css');
-@import url('./layout/base.css');
+@import url('../layout/fonts.css');
+@import url('../layout/normalize.css');
+@import url('../layout/base.css');
 
+@import url('./blocks/wrapper.css');
 @import url('./blocks/top-line.css');
 @import url('./blocks/header.css');
 @import url('./blocks/logo.css');
